# rust_course_practice_3

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
api/: Cargo.toml  README.md  build.rs
api/proto/: blog.proto
api/src/: lib.rs  rest.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs
client/: Cargo.toml  README.md
client/examples/: grpc_example.rs  http_example.rs
client/src/: blog_client.rs  error.rs  grpc_client.rs  http_client.rs  interceptor.rs  lib.rs  token_manager.rs  types.rs
docker/postgres/: docker-compose.yaml
server/: Cargo.toml  README.md  config.yaml.example
server/.sqlx/: query-3e7263f2959db907d53851d16b365fd31936c1a7674ece9d68e6f69491ad3881.json  query-53cd67b0ac0d86b45186fea395c4ee076149a735260590dd93f33bd9176d4727.json  query-5fc43051b4324d80cb217a1beba45d04f0d70d820121b430b5e228495f243c11.json  query-84e38e201a8e1a2a00d6950d5ed201623222abbb05dd62fc0e92092ca971e8a1.json  query-c57adb1b6a45f33311d6259ed0b320cb7688f4a2240d88f1b5d247f4a68009e5.json  query-d21a5a95b48f0317e0c779b20009b3ccfd3ab6770248504f6cd721887e5e1e5b.json  query-e3f1024b5f525bdc2d1715e3a73c2380e6bad0a8de365f2b2b298e4c0ae5a40d.json  query-edcb4cd444e1d8d8f1bf9428a0595e76a7035d9aa474d421b91cd4514034c263.json
server/migrations/: 001_initial_schema.sql
server/src/: lib.rs  main.rs
server/src/application/: auth.rs  mod.rs  post.rs
server/src/application/dto/: auth.rs  post.rs
server/src/data/: mod.rs  pgrepo.rs
server/src/domain/entities/: errors.rs  mod.rs  post.rs  user.rs
server/src/domain/repositories/: repo.rs
server/src/domain/services/: auth.rs
server/src/infrastructure/: config.rs
server/src/presentation/: error.rs  mod.rs
server/src/presentation/grpc/: auth.rs  mod.rs  service.rs
server/src/presentation/http/: handlers.rs  middleware.rs
wasm/: Cargo.toml  Dioxus.toml  README.md
wasm/assets/: tailwind.css
wasm/assets/styling/: main.css
wasm/src/: main.rs  storage.rs
wasm/src/components/: authenticated_app.rs  login_form.rs  mod.rs  post_card.rs  post_form.rs  post_view.rs  posts_list.rs  register_form.rs
