[package]
name = "api"
version = "0.1.0"
edition = "2024"

[features]
default = ["rest", "grpc"]
rest = ["serde", "serde_json"]
grpc = ["prost", "prost-types", "tonic", "tonic-prost"]

[dependencies]
prost = { version = "0.14.3", optional = true }
prost-types = { version = "0.14.3", optional = true }
serde = { version = "1.0.228", optional = true, features = ["derive"] }
serde_json = { version = "1.0.149", optional = true }
tonic = { version = "0.14.3", optional = true }
tonic-prost = { version = "0.14.3", optional = true }

[build-dependencies]
tonic-prost-build = "0.14.3"
