[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
chrono = "0.4.43"
jsonwebtoken = "10.3.0"
prost = "0.14.3"
prost-types = "0.14.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["sync", "rt-multi-thread", "macros"] }
tonic = "0.14.4"
api = { path = "../api" }
uuid = "1.21.0"
async-trait = "0.1.89"
