[package]
name = "client"
version = "0.1.0"
edition = "2024"

# Features:
# - default: Includes both http and grpc clients
# - http: HTTP client using reqwest
# - grpc: gRPC client using tonic
# - wasm: Enable this feature for WebAssembly builds (use with http feature)
#
# Usage examples:
# - Only HTTP client: cargo build --no-default-features --features http
# - Only gRPC client: cargo build --no-default-features --features grpc
# - Both clients: cargo build (default)
# - HTTP client for WASM: cargo build --target wasm32-unknown-unknown --no-default-features --features http
[features]
default = ["http", "grpc"]
http = ["reqwest", "api/rest"]
grpc = ["tonic", "prost", "prost-types", "api/grpc"]
wasm = []

[dependencies]
anyhow = "1.0.101"
chrono = "0.4.43"
jsonwebtoken = "10.3.0"
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
uuid = "1.21.0"
async-trait = "0.1.89"
api = { path = "../api", default-features = false }

# gRPC client dependencies (only for non-wasm targets)
prost = { version = "0.14.3", optional = true }
prost-types = { version = "0.14.3", optional = true }
tonic = { version = "0.14.4", optional = true }

# Native dependencies (non-wasm)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.49.0", features = ["sync", "rt-multi-thread", "macros"] }
reqwest = { version = "0.13.2", features = ["json"], optional = true }

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.49.0", features = ["sync", "macros"], default-features = false }
reqwest = { version = "0.13.2", features = ["json"], default-features = false, optional = true }
getrandom = { version = "0.2", features = ["js"] }
