[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7"
actix-web = "4.12.1"
actix-web-httpauth = "0.8"
anyhow = "1.0.101"
api = { path = "../api" }
argon2 = "0.5.3"
async-trait = "0.1"
chrono = "0.4.43"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
prost-types = "0.14"
protobuf = "3.7.2"
serde = "1.0.228"
serde_json = "1.0.149"
serde_yml = "0.0.12"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid"] }
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
tonic = "0.14.3"
tonic-build = "0.14.3"
tonic-codec-protobuf = "0.1.0"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.20.0", features = ["v7"] }
